# holytools

./: .gitignore  main.py  pyproject.toml  readme.md  requirements.txt  setup.py  test.py
.github/workflows/: pypi.yml  unittests.yml  wf.yml
dependencies/: generate_venv.py
events/: __init__.py  input_waiter.py
ext_json/: serializable.py
ext_pathlib/: paths.py
ext_threading/: __init__.py
file_io/: __init__.py
functions/: inspection.py
hollarek/: __init__.py
hollarek/abstract/: __init__.py  enum.py  integer_inf.py
hollarek/configs/: __init__.py  abstr.py  configs.py
hollarek/datatypes/: json_dataclass.py
hollarek/dev/: __init__.py
hollarek/devtools/: __init__.py
hollarek/events/: __init__.py  clock.py  countdown.py  input_waiter.py  limited_pool.py  schedule.py  task_pool.py  task_scheduler.py  timer.py
hollarek/ext_json/: __init__.py  serializable.py
hollarek/ext_typing/: inspection.py
hollarek/ext_web/: webtool.py
hollarek/file/: __init__.py  binary.py  file.py  image.py  text.py
hollarek/fileIO/: __init__.py  binary.py  file_io.py  image.py  text.py
hollarek/fsys/: __init__.py  fsys_node.py  location_manager.py  save_manager.py
hollarek/logging/: __init__.py  interface.py  logger.py  settings.py
hollarek/misc/: __init__.py  (+3 more)
json/: repair_json.py
misc/: __init__.py  countdown.py  thread.py
path/: paths.py
pyutils/: __init__.py
resources/: __init__.py  config_manager.py
serialization/: serializable.py
test_suite/: t_Configs.py  t_configs.py  t_dtyping.py  t_fsys.py  t_hardware.py  t_jsonifyable.py  t_logging.py  t_unit.py  t_web.py  test_aes.py
tests/: t_configs.py  t_fileIO.py  t_fsys.py  t_hardware.py  t_logging.py  t_network.py  t_user.py  t_user_io.py  t_web.py  tox.ini
threads/: thread.py
web/: webtool.py
(+280 files in other folders)
