[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hollarek"
version = "0.9.1"
authors = [{name = "Daniel Hollarek", email = "daniel.hollarek@googlemail.com"}]
description = "Collection of general python utilities for future projects"
dynamic = ["dependencies"]
urls = { "repository" = "https://github.com/Somerandomguy10111/hollarek" }

[tool.setuptools.package-data]
"hollarek.file.spoof" = ["*"]


[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

