[project]
name = "holytools"
version = "0.9.9"
authors = [{name = "Daniel Hollarek", email = "daniel.hollarek@googlemail.com"}]
description = "Collection of very general python utilities "
readme = "readme.md"
dependencies = ["requests", "pathvalidate", "psutil", "pympler",
    "dill", "orjson", "mss", "screeninfo", "pynput", "pillow", "progressbar2", "tabulate", "python-call-graph",
    "easycrypt @ git+https://github.com/Somerandomguy10111/easycrypt"]
urls = { "repository" = "https://github.com/Somerandomguy10111/holytools" }

[tool.setuptools.package-data]
"holytools.fileIO.mock" = ["*"]

[project.scripts]
cred = "holytools.configs.cred:main"
